--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
-body{
-background-color:#c10ef0;
-}
-h1
-{
-color:pink;
-text-align:center;
-font-size:90px;
-}
-p
-{
-font family:"Jokerman"
-font-size:40px;
-border:thick dashed yellow;
-}
+
+
+<html>
+<body>
+<h1 style="color:pink">FLOWERS</h1>
+<p style="background:#eeeddd;border:solid red 2px">Flowers are of many types</p>
+<p style="font:large;line-height:1.5cm;color:#fff8800">Some of them have good smell,while some of them have nice colors</p>
+<h1 ALIGN="center" STYLE="background:#000040;font:38pt/40pt courier;font-variant:small caps;border:thick solid red">Many butterflies and honey bees suck nectar from flowers</h1>
+</body>
+</html>
