--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                 <h1>
                     I am Tanya Barnwal.<br>
-                    <span style="font-size:0.7em;">I am a Front-end Developer.</span><br>
+                    <span style="font-size:0.7em;">I am a Web Developer.</span><br>
                 </h1>
 
                 <div class="home-content__buttons">
