--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="row about-content about-content--buttons">
 
             <div class="col-six tab-full left">
-                <a href="https://drive.google.com/open?id=1Buob_7FJSzkVbtvdPNEaDO0QAQ1PrC_F" class="btn btn--primary full-width">Download My CV</a>
+                <a href="https://github.com/tanyabarnwal/Resume/blob/master/Resume.pdf" class="btn btn--primary full-width">Download My CV</a>
             </div>
             <div class="col-six tab-full right">
                 <a href="#0" class="btn full-width">Hire Me Now</a>
